<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewAccountActivity">

    <LinearLayout
        android:id="@+id/lin_lay_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_registration" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/label_registration_2"
            android:textSize="27sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/lin_lay_header"
        android:background="@color/bank_green" />

    <LinearLayout
        android:id="@+id/lin_lay_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/l_first_name"
            android:layout_width="142dp"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-black"
            android:labelFor="@+id/et_first_name"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:text="@string/label_first_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:maxLength="40"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lin_lay_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_first_name"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/l_last_name"
            android:layout_width="142dp"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-black"
            android:labelFor="@+id/et_last_name"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:text="@string/label_last_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:maxLength="40"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_patronymic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_last_name"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/l_patronymic"
            android:layout_width="142dp"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-black"
            android:labelFor="@+id/et_last_name"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:text="@string/label_patronymic"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_patronymic"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:maxLength="40"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_patronymic"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/l_birth_date"
            android:layout_width="142dp"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-black"
            android:labelFor="@+id/et_last_name"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:text="@string/label_birth_date"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_current_date"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />


        <ImageButton
            android:id="@+id/calendarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:onClick="setDate"
            app:srcCompat="@android:drawable/ic_menu_today"
            android:contentDescription="calendarButton" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_birth_date"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="142dp"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-black"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/label_country"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:entries="@array/countries" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lin_lay_town"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_country"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/l_town"
            android:layout_width="142dp"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-black"
            android:labelFor="@+id/et_town"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:text="@string/label_town"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_town"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:maxLength="40"
            />

    </LinearLayout>


    <Button
        android:id="@+id/b_create_account"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_town"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/bank_green"
        android:text="@string/button_register"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:icon="@android:drawable/stat_sys_upload"
         />

    <View
        android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/b_create_account"
        android:layout_marginTop="10dp"
        android:background="@color/bank_green"
        />


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_create_account"
        app:srcCompat="@drawable/logo"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name" />


</RelativeLayout>