<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewTransactionActivity">

    <LinearLayout
        android:id="@+id/lin_lay_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_transaction" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/label_new_transaction"
            android:textSize="30sp" />
    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/lin_lay_header"
        android:background="@color/bank_green"
        />

    <LinearLayout
        android:id="@+id/lin_lay_receiver_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_header"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_receiver_account_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-black"
            android:labelFor="@+id/et_username"
            android:paddingTop="15dp"
            android:width="150dp"
            android:text="@string/label_receiver_account_number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_receiver_account_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:maxLength="40"
            android:textAlignment="textStart"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_amount_of_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_receiver_account"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_amount_of_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-black"
            android:labelFor="@+id/et_amount_of_money"
            android:paddingTop="15dp"
            android:width="150dp"
            android:text="@string/label_transaction_sum"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_amount_of_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:maxLength="40"
            android:textAlignment="textStart"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lin_lay_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_amount_of_money"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="168dp"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-black"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/label_currency"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:layout_marginEnd="10dp"
            android:entries="@array/currencies"
            android:layout_gravity="end"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_currency"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-black"
            android:labelFor="@+id/et_currency"
            android:layout_marginStart="10dp"
            android:text="@string/label_category"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:layout_marginEnd="10dp"
            android:entries="@array/categories"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_category"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-black"
            android:labelFor="@+id/et_comment"
            android:paddingTop="15dp"
            android:width="150dp"
            android:text="@string/label_comment"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:importantForAutofill="no"
            android:maxLength="40"
            android:textAlignment="textStart"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:id="@+id/bottom_divider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/lin_lay_comment"
        android:layout_marginTop="10dp"
        android:background="@color/bank_green"
        />



    <Button
        android:id="@+id/b_make_transaction"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottom_divider1"
        android:layout_centerHorizontal="true"
        android:background="@color/bank_green"
        android:text="@string/button_make_transaction"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:strokeColor="@color/white" />

    <View
        android:id="@+id/bottom_divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/b_make_transaction"
        android:layout_marginTop="10dp"
        android:background="@color/bank_green"
        />


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottom_divider2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        app:srcCompat="@drawable/logo" />



</RelativeLayout>